3.9.1/_sources/users/explain/animations/index.rst.txt


.. _sphx_glr_users_explain_animations:

===========================
Animations using Matplotlib
===========================

Based on its plotting functionality, Matplotlib also provides an interface to
generate animations using the `~matplotlib.animation` module. An
animation is a sequence of frames where each frame corresponds to a plot on a
`~matplotlib.figure.Figure`. This tutorial covers a general guideline on
how to create such animations and the different options available.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Based on its plotting functionality, Matplotlib also provides an interface to generate animatio...">

.. only:: html

  .. image:: /users/explain/animations/images/thumb/sphx_glr_animations_thumb.gif
    :alt:

  :ref:`sphx_glr_users_explain_animations_animations.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Animations using Matplotlib</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Blitting is a standard technique in raster graphics that, in the context of Matplotlib, can be ...">

.. only:: html

  .. image:: /users/explain/animations/images/thumb/sphx_glr_blitting_thumb.png
    :alt:

  :ref:`sphx_glr_users_explain_animations_blitting.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Faster rendering by using blitting</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /users/explain/animations/animations
   /users/explain/animations/blitting

